Lesson-11-Ingress/ingress-hosts.yaml
#---------------------------------------------------------------------
# Manifest File to create Ingess Rules for Hosts
#
# Copyleft (c) by Denis Astahov 2021
#---------------------------------------------------------------------
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hosts

spec:
  rules:
  - host: test-app.soft-infra.geoscan.ru
    http:
      paths:
        - backend:
            service:
              name: my-web-deployment-replicas
              port: 
                number: 80
          path: /
          pathType: Prefix

  - host: nginx.soft-infra.geoscan.ru
    http:
      paths:
        - backend:
            service:
              name: nginx-app
              port:
                number: 80
          path: /
          pathType: Prefix
  - host: tomcat.soft-infra.geoscan.ru
    http:
      paths:
        - backend:
            service:
              name: tomcat-app
              port: 
                number: 80
          path: /
          pathType: Prefix
